# examples

./: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.circleci/: config.yml
.github/: CONTRIBUTING.md
ecommerce-demo/: .prettierignore  graphql-env.d.ts  introspection.json  (+5 more)
partial-query-caching-demo/: .gitignore  Cargo.toml  README.md  graphiql.html  next.config.js  package.json  pnpm-lock.yaml  schema.ts  vercel.json
partial-query-caching-demo/api/: cache.rs  graphql.rs  handler.rs  manifest.rs  request.rs  schema.rs
partial-query-caching-demo/api/merge/: document.rs  mod.rs  response.rs
partial-query-caching-demo/api/split/: inline_fragments.rs  mod.rs  query_splitter.rs  selection_set_extractor.rs  selection_set_replacer.rs
partial-query-caching-demo/app/: route.ts  schema.ts
partial-query-caching-demo/gql-query-rs/: Cargo.toml  README.md
partial-query-caching-demo/gql-query-rs/.github/workflows/: main.yml
partial-query-caching-demo/gql-query-rs/benches/: parser.rs
partial-query-caching-demo/gql-query-rs/src/: error.rs  lib.rs
partial-query-caching-demo/gql-query-rs/src/ast/: ast.rs  ast_conversion.rs  ast_util.rs  lexer.rs  mod.rs  parser.rs  printer.rs
partial-query-caching-demo/gql-query-rs/src/json/: conversion.rs  mod.rs  values.rs
partial-query-caching-demo/gql-query-rs/src/schema/: build_client_schema.rs  introspection.rs  mod.rs  schema.rs  schema_reference.rs
partial-query-caching-demo/gql-query-rs/src/validate/: context.rs  mod.rs  validate.rs
partial-query-caching-demo/gql-query-rs/src/validate/rules/: known_fragment_names.rs  lone_anonymous_operation.rs  no_fragment_cycles.rs  no_undefined_variables.rs  no_unused_fragments.rs  unique_argument_names.rs  unique_fragment_names.rs  unique_operation_names.rs  unique_variable_names.rs
partial-query-caching-demo/gql-query-rs/src/visit/: compose.rs  folder.rs  mod.rs  path.rs  visitor.rs
(+109 files in other folders)
