[package]
name = "gql-query"
version = "0.1.0"
authors = ["Phil Pluckthun <phil@kitten.sh>"]
repository = "https://github.com/graphcdn/gql-query-rs"
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["json"]
json = ["serde_json", "serde"]

[dependencies]
serde_json = { version = "^1.0.0", optional = true }
serde = { version = "^1.0.0", optional = true, features = ["derive"] }
logos = { version = "0.12.0", features = ["std"] }
lexical-core = { version = "0.8.3", features = ["std", "format", "power-of-two", "safe"] }
toolshed = "0.8.1"

[dev-dependencies]
serde = "^1.0.0"
serde_json = "^1.0.0"
indoc = "1.0.6"
bencher = "0.1.5"

[profile.release]
lto = true
panic = 'abort'

[profile.bench]
lto = true

[[bench]]
name = "parser"
harness = false
